--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,13 +4,25 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
     <servlet>
-        <servlet-name>bookServlet</servlet-name>
+        <servlet-name>student</servlet-name>
         <servlet-class>servlet.MyServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>bookServlet</servlet-name>
+        <servlet-name>student</servlet-name>
         <url-pattern>/servlet/*</url-pattern>
     </servlet-mapping>
+
+
+
+    <filter>
+        <filter-name>filterstud</filter-name>
+        <filter-class>filter.MyFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>filterstud</filter-name>
+        <url-pattern>/servlet/*</url-pattern>
+    </filter-mapping>
 
   <!--  <error-page>
         <exception-type>javax.servlet.ServletException</exception-type>
